--- a/dev/index.html
+++ b/dev/index.html
@@ -80,17 +80,21 @@
                   </div>
                 </div>
 
-                <div class="form-group row">
-                  <label class="col-sm-4 col-form-label col-form-label-lg" for="exampleInputEmail1">My email is </label>
-                  <div class="col-sm-8">
+                <div class="form-group row align-items-left">
+                  <div class="col-auto">
+                    <label class="col-form-label col-form-label-lg" for="exampleInputEmail1">My email is </label>
+                  </div>
+                  <div class="col-auto">
                     <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                   </div>
                   <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                 </div>
 
-                <div class="form-group row">
-                  <label class="col-sm-4 col-form-label col-form-label-lg" for="exampleSelect1">and I'm a </label>
-                  <div class="col-sm-8">
+                <div class="form-group row align-items-left">
+                  <div class="col-auto">
+                    <label class="col-sm-4 col-form-label col-form-label-lg" for="exampleSelect1">and I'm a </label>
+                  </div>
+                  <div class="col-auto">
                     <select class="form-control form-control-lg" id="exampleSelect1">
                       <option>Attending</option>
                       <option>Resident</option>
@@ -102,9 +106,11 @@
                   </div>
                 </div>
 
-                <div class="form-group row">
-                  <label class="col-sm-6 col-form-label col-form-label-lg" for="exampleSelect1">interested in being a</label>
-                  <div class="col-sm-6">
+                <div class="form-group row align-items-left">
+                  <div class="col-auto">
+                    <label class="col-sm-6 col-form-label col-form-label-lg" for="exampleSelect1">interested in being a</label>
+                  </div>
+                  <div class="col-auto">
                     <select class="form-control form-control-lg" id="exampleSelect1">
                       <option>participant</option>
                       <option>mentor</option>
@@ -113,11 +119,14 @@
                   </div>
                 </div>
 
-                <div class="form-group row">
-                  <label class="col-sm-6 col-form-label col-form-label-lg" for="exampleSelect1">at the hackathon.</label>
-                  <div class="col-sm-6">
+                <div class="form-group row align-items-left">
+                  <div class="col-auto">
+                    <label class="col-sm-6 col-form-label col-form-label-lg" for="exampleSelect1">at the hackathon.</label>
+                  </div>
+                  <div class="col-auto">
                     <button type="submit" class="btn btn-primary">Submit</button>
                   </div>
+                </div>
               </form>
 
 
