--- a/dev/index.html
+++ b/dev/index.html
@@ -92,7 +92,7 @@
 
                 <div class="form-group row align-items-left">
                   <div class="col-auto">
-                    <label class="col-sm-4 col-form-label col-form-label-lg" for="exampleSelect1">and I'm a </label>
+                    <label class="col-form-label col-form-label-lg" for="exampleSelect1">and I'm a </label>
                   </div>
                   <div class="col-auto">
                     <select class="form-control form-control-lg" id="exampleSelect1">
@@ -108,7 +108,7 @@
 
                 <div class="form-group row align-items-left">
                   <div class="col-auto">
-                    <label class="col-sm-6 col-form-label col-form-label-lg" for="exampleSelect1">interested in being a</label>
+                    <label class="col-form-label col-form-label-lg" for="exampleSelect1">interested in being a</label>
                   </div>
                   <div class="col-auto">
                     <select class="form-control form-control-lg" id="exampleSelect1">
@@ -121,7 +121,7 @@
 
                 <div class="form-group row align-items-left">
                   <div class="col-auto">
-                    <label class="col-sm-6 col-form-label col-form-label-lg" for="exampleSelect1">at the hackathon.</label>
+                    <label class="col-form-label col-form-label-lg" for="exampleSelect1">at the hackathon.</label>
                   </div>
                   <div class="col-auto">
                     <button type="submit" class="btn btn-primary">Submit</button>
