--- a/dev/index.html
+++ b/dev/index.html
@@ -61,13 +61,13 @@
               <h1 class="brand-heading">Hack
                 <br>the <span style="background-color: #37474f">&nbspOR&nbsp</span></h1>
               <h2>@ AT YALE SCHOOL OF MEDICINE<br><br></h2>
-              <p>Saturday, September 29, 2018
+              <p class="intro-text">Saturday, September 29, 2018
               <br>THE ANLYAN CENTER<br>300 Cedar Street, New Haven, CT
               <br>REFRESHMENTS WILL BE SERVED<br></p>
               <p class="intro-text">Presented by CBIT and Yale Surgery</p>
             </div>
             <div class="col-lg-6 mx-auto text-align-middle">
-            
+
               <form>
                 <div class="form-group row align-items-left">
                   <div class="col-auto">
