--- a/dev/index.html
+++ b/dev/index.html
@@ -77,6 +77,9 @@
                     <input type="text" class="form-control form-control-lg" id="inputName" aria-describedby="inputName" placeholder="Name">
                 <!-- <small id="nameHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                   </div>
+                  <div class="col-auto">
+                    <label class="col-form-label col-form-label-lg" for="exampleInputEmail1">.</label>
+                  </div>
                 </div>
 
                 <div class="form-group row align-items-left">
@@ -85,6 +88,9 @@
                   </div>
                   <div class="col-auto">
                     <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                  </div>
+                  <div class="col-auto">
+                    <label class="col-form-label col-form-label-lg" for="exampleInputEmail1">,</label>
                   </div>
                   <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                 </div>
