--- a/dev/index.html
+++ b/dev/index.html
@@ -128,10 +128,11 @@
                   <div class="col-auto">
                     <label class="col-form-label col-form-label-lg" for="exampleSelect1">at the hackathon.</label>
                   </div>
-                  <div class="col-auto">
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                  </div>
+
                 </div>
+
+                <button type="submit" class="btn btn-primary btn-xl">LET'S GO!</button>
+
               </form>
 
 
