--- a/dev/index.html
+++ b/dev/index.html
@@ -66,7 +66,7 @@
               <br>REFRESHMENTS WILL BE SERVED<br></p>
               <p class="intro-text">Presented by CBIT and Yale Surgery</p>
             </div>
-            <div class="col-lg-6 mx-auto text-align-middle">
+            <div class="col-lg-6 mx-auto">
 
               <form>
                 <div class="form-group row align-items-left">
