--- a/dev/index.html
+++ b/dev/index.html
@@ -66,7 +66,7 @@
               <br>REFRESHMENTS WILL BE SERVED<br></p>
               <p class="intro-text">Presented by CBIT and Yale Surgery</p>
             </div>
-            <div class="col-lg-6 mx-auto">
+            <div class="col-lg-6 mx-auto malign">
 
               <form>
                 <div class="form-group row align-items-left">
@@ -131,7 +131,7 @@
 
                 </div>
 
-                <button type="submit" class="btn btn-primary btn-xl">LET'S GO!</button>
+                <button type="submit" class="btn btn-primary btn-lg">LET'S GO!</button>
 
               </form>
 
