--- a/dev/index.html
+++ b/dev/index.html
@@ -131,7 +131,7 @@
 
                 </div>
 
-                <button type="submit" class="btn btn-primary btn-lg">LET'S GO!</button>
+                <button type="submit" class="btn btn-default btn-lg">LET'S GO!</button>
 
               </form>
 
