--- a/dev/index.html
+++ b/dev/index.html
@@ -130,9 +130,9 @@
                   </div>
 
                 </div>
-
-                <button type="submit" class="btn btn-default btn-lg">LET'S GO!</button>
-
+                <div class="form-group row align-items-left">
+                  <button type="submit" class="btn btn-default btn-lg">LET'S GO!</button>
+                </div>
               </form>
 
 
