--- a/dev/index.html
+++ b/dev/index.html
@@ -131,7 +131,7 @@
 
                 </div>
                 <div class="form-group row align-items-left">
-                  <p>&nbsp;&nbsp;</p>
+                  <p>&nbsp;&nbsp;&nbsp;</p>
                   <button type="submit" class="btn btn-default btn-lg">LET'S GO!</button>
                 </div>
               </form>
