--- a/dev/index.html
+++ b/dev/index.html
@@ -161,7 +161,7 @@
             <p>A hackathon is an event in which people at all levels of training (attendings, residents, medical students), and across
             variety of disciplines (medicine, engineering, design, etc.) come together to come up with problems in a particular field and
             design solutions through iterative prototyping.</p>
-            <p>We want to apply this concept to the field of surgery.</p>
+            <p>We want to apply this concept to the field of surgery. We believe in a one day event, teams will be able to come up with amazing  concepts that can lay the groundwork for future projects and ventures. Prototypes can be simple sketches or mock ups. The goal is to iterate and improve rapidly in a short period of time, so the prototype doesn't have to be perfect...just look at the title.</p>
           </div>
         </div>
       </div>
