--- a/dev/index.html
+++ b/dev/index.html
@@ -200,15 +200,16 @@
         </div>
         <div class="row">
           <div class="col-md-6">
-            <p>FRI 7PM - Welcome - TAC Auditorium</p>
+            <h2 style="font-weight:300; font-size: 18pt">FRIDAY (OPTIONAL)</h2>
+            <p>7PM - Welcome - TAC Auditorium</p>
             <p>9PM - Networking Reception - Local Venue</p>
+            <h2 style="font-weight:300; font-size: 18pt">SATURDAY</h2>
             <p>SAT 7AM - Breakfast - TAC Lobby</p>
             <p>8AM - Opening Remarks - TAC Auditorium</p>
             <p>8:30AM - Problem Pitches</p>
-            <p>9AM - Team Formation</p>
-
           </div>
           <div class="col-md-6">
+            <p>9AM - Team Formation</p>
             <p>9:30AM - Preliminary Idea Pitches</p>
             <p>10AM - Hacking Begins - Harkness</p>
             <p>12PM - Lunch - Harkness</p>
