--- a/dev/index.html
+++ b/dev/index.html
@@ -215,7 +215,7 @@
             <p>12PM - Lunch - Harkness</p>
             <p>5PM - Final Pitches - TAC Auditorium</p>
             <p>6PM - Reception</p>
-            <p>6:30PM - Prizes</p>
+            <p>6:30PM - Winners Announced</p>
           </div>
         </div>
 
@@ -259,7 +259,7 @@
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/team/sathe.jpg">
+            <a class="portfolio-box" href="">
               <img class="img-fluid" src="img/team/sathe.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -274,7 +274,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/team/swallow.png">
+            <a class="portfolio-box" href="">
               <img class="img-fluid" src="img/team/swallow.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -289,7 +289,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/team/kristin.png">
+            <a class="portfolio-box" href="">
               <img class="img-fluid" src="img/team/kristin.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -304,7 +304,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/team/stitelman.png">
+            <a class="portfolio-box" href="">
               <img class="img-fluid" src="img/team/stitelman.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -319,7 +319,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/team/caty.png">
+            <a class="portfolio-box" href="">
               <img class="img-fluid" src="img/team/caty.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -334,7 +334,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/team/khalid.png">
+            <a class="portfolio-box" href="">
               <img class="img-fluid" src="img/team/khalid.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
