--- a/dev/index.html
+++ b/dev/index.html
@@ -60,7 +60,7 @@
             <div class="col-lg-6 mx-auto">
               <h1 class="brand-heading">Hack
                 <br>the <span style="background-color: #37474f">&nbspOR&nbsp</span></h1>
-              <h2>@ AT YALE SCHOOL OF MEDICINE<br><br></h2>
+              <h2>@ AT YALE SCHOOL OF MEDICINE<br><br><br></h2>
               <p class="intro-text">Presented by CBIT and Yale Surgery<br></p>
               <p class="intro-text">Saturday, September 29, 2018
               <br>300 Cedar Street, New Haven, CT</p>
