--- a/dev/index.html
+++ b/dev/index.html
@@ -157,7 +157,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto">
-            <h2>IDEA. PROTOTPYE. <span style="background-color: #03a9f4; color: #ffffff">&nbspREPEAT.&nbsp</span></h2>
+            <h2>INNOVATE. PROTOTPYE. <span style="background-color: #03a9f4; color: #ffffff">&nbspREPEAT.&nbsp</span></h2>
             <p>A hackathon is an event in which people at all levels of training (attendings, residents, medical students), and across
             variety of disciplines (medicine, engineering, design, etc.) come together to come up with problems in a particular field and
             design solutions through iterative prototyping.</p>
