--- a/dev/index.html
+++ b/dev/index.html
@@ -57,7 +57,7 @@
       <div class="intro-body">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6 mx-auto">
+            <div class="col-lg-6 mx-auto malign">
               <h1 class="brand-heading">Hack
                 <br>the <span style="background-color: #37474f">&nbspOR&nbsp</span></h1>
               <h2>@ AT YALE SCHOOL OF MEDICINE<br><br><br></h2>
