--- a/dev/index.html
+++ b/dev/index.html
@@ -58,7 +58,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6 mx-auto malign">
-              <img class="img-fluid" src="img/logo.png" alt="">
+              <img class="img-fluid" src="img/logo1.png" alt="">
               <!-- <h1 class="brand-heading">Hack
                 <br>the <span style="background-color: #37474f">&nbspOR&nbsp</span></h1> -->
               <!-- <h2>@ AT YALE SCHOOL OF MEDICINE<br><br><br></h2> -->
