--- a/dev/index.html
+++ b/dev/index.html
@@ -65,6 +65,13 @@
               <p class="intro-text"><br><br>Presented by CBIT and Yale Surgery<br></p>
               <p class="intro-text">Saturday, September 29, 2018
               <br>300 Cedar Street, New Haven, CT</p>
+              <ul>
+                <li><a href="http://twitter.com/"><i class="fa fa-twitter fa-3x"></i></a></li>
+                <li><a href="http://instagram.com/"><i class="fab fa-instagram fa-3x"></i>"></i> </a></li>
+                <li><a href="mailto://hackyalesurg@gmail.com"><i class="far fa-envelope fa-3x"></i> fa-3x"></i>"></i> </a></li>
+              </ul>
+
+              <i class="fab fa-twitter"></i>
             </div>
 
             <div class="col-lg-6 mx-auto malign">
