--- a/dev/index.html
+++ b/dev/index.html
@@ -68,8 +68,8 @@
               <br>300 Cedar Street, New Haven, CT</p>
               <ul>
                 <li><a href="http://twitter.com/"><i class="fab fa-twitter fa-3x"></i></a></li>
-                <li><a href="http://instagram.com/"><i class="fab fa-instagram fa-3x"></i>"></i> </a></li>
-                <li><a href="mailto://hackyalesurg@gmail.com"><i class="far fa-envelope fa-3x"></i> fa-3x"></i>"></i> </a></li>
+                <li><a href="http://instagram.com/"><i class="fab fa-instagram fa-3x"></i></a></li>
+                <li><a href="mailto://hackyalesurg@gmail.com"><i class="far fa-envelope fa-3x"></i></a></li>
               </ul>
             </div>
 
