--- a/dev/resources.html
+++ b/dev/resources.html
@@ -58,11 +58,8 @@
       <div class="intro-body">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6 mx-auto malign align-items-left text-align-left">
+            <!-- <div class="col-lg-6 mx-auto malign align-items-left text-align-left">
               <img class="img-fluid" src="img/logo1.png" alt="">
-              <!-- <h1 class="brand-heading">Hack
-                <br>the <span style="background-color: #37474f">&nbspOR&nbsp</span></h1> -->
-              <!-- <h2>@ AT YALE SCHOOL OF MEDICINE<br><br><br></h2> -->
               <p class="intro-text"><br><br>Presented by CBIT and Yale Surgery<br></p>
               <p class="intro-text">Saturday, September 29, 2018
               <br>300 Cedar Street, New Haven, CT</p>
@@ -72,9 +69,9 @@
                 <li><a href="http://instagram.com/"><i class="fab fa-instagram fa-3x"></i></a></li>
                 <li><a href="mailto://hackyalesurg@gmail.com"><i class="far fa-envelope fa-3x"></i></a></li>
               </ul>
-            </div>
+            </div> -->
 
-            <div class="col-lg-6 mx-auto malign">
+            <!-- <div class="col-lg-6 mx-auto malign">
               <p><br></p>
               <form>
                 <div class="form-group row align-items-left">
@@ -83,7 +80,6 @@
                   </div>
                   <div class="col-auto">
                     <input type="text" class="form-control form-control-lg" id="inputName" aria-describedby="inputName" placeholder="Name">
-                <!-- <small id="nameHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                   </div>
                   <div class="col-auto">
                     <label class="col-form-label col-form-label-lg" for="exampleInputEmail1">.</label>
@@ -100,7 +96,6 @@
                   <div class="col-auto">
                     <label class="col-form-label col-form-label-lg" for="exampleInputEmail1">,</label>
                   </div>
-                  <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                 </div>
 
                 <div class="form-group row align-items-left">
@@ -147,7 +142,7 @@
 
 
 
-            </div>
+            </div> -->
           </div>
           <!-- <div class="row">
             <div class="col-lg-8 mx-auto">
