--- a/dev/resources.html
+++ b/dev/resources.html
@@ -22,7 +22,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/grayscale.min.css" rel="stylesheet">
-    <link href="css/update.css" rel="stylesheet">
+    <link href="css/update_resources.css" rel="stylesheet">
 
   </head>
 
