--- a/dev/resources.html
+++ b/dev/resources.html
@@ -55,9 +55,9 @@
 
     <!-- Intro Header -->
     <header class="masthead">
-      <div class="intro-body">
+      <!-- <div class="intro-body">
         <div class="container">
-          <div class="row">
+          <div class="row"> -->
             <!-- <div class="col-lg-6 mx-auto malign align-items-left text-align-left">
               <img class="img-fluid" src="img/logo1.png" alt="">
               <p class="intro-text"><br><br>Presented by CBIT and Yale Surgery<br></p>
@@ -143,7 +143,7 @@
 
 
             </div> -->
-          </div>
+          <!-- </div> -->
           <!-- <div class="row">
             <div class="col-lg-8 mx-auto">
               <a href="#about" class="btn btn-circle js-scroll-trigger">
@@ -151,8 +151,8 @@
               </a>
             </div>
           </div> -->
-        </div>
-      </div>
+        <!-- </div>
+      </div> -->
     </header>
 
     <!-- About Section -->
