--- a/dev/resources.html
+++ b/dev/resources.html
@@ -161,11 +161,100 @@
         <div class="row">
           <div class="col-lg-12 mx-auto">
             <h2>INNOVATE. PROTOTPYE. <span style="background-color: #03a9f4; color: #ffffff">&nbspREPEAT.&nbsp</span></h2>
-            <p>A hackathon is an event in which people at all levels of training (attendings, residents, medical students), and across
-            variety of disciplines (medicine, engineering, design, etc.) come together to come up with problems in a particular field and
-            design solutions through iterative prototyping.</p>
-            <p>We want to apply this concept to the field of surgery. We believe in a one day event, teams will be able to come up with amazing  concepts that can lay the groundwork for future projects and ventures. Prototypes can be simple sketches or mock ups. The goal is to iterate and improve rapidly in a short period of time, so the prototype doesn't have to be perfect...just look at the title.</p>
-            <p>For more information, you can find a video featuring the 2017 Yale Healthcare Hackathon <a href="https://www.youtube.com/watch?v=KfVDXWbqc6o">here</a>.</p>
+          </div>
+        </div>
+        <div class="container-fluid p-0">
+          <div class="row no-gutters popup-gallery">
+            <div class="col-lg-4 col-sm-6">
+              <a class="portfolio-box" href="">
+                <img class="img-fluid" src="img/team/sathe.jpg" alt="">
+                <div class="portfolio-box-caption">
+                  <div class="portfolio-box-caption-content">
+                    <div class="project-name">
+                      Tejas Sathe
+                    </div>
+                    <div class="project-category text-faded">
+                      Co-Chair
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <a class="portfolio-box" href="">
+                <img class="img-fluid" src="img/team/swallow.png" alt="">
+                <div class="portfolio-box-caption">
+                  <div class="portfolio-box-caption-content">
+                    <div class="project-name">
+                      Matthew Swallow
+                    </div>
+                    <div class="project-category text-faded">
+                      Co-Chair
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <a class="portfolio-box" href="">
+                <img class="img-fluid" src="img/team/kristin.png" alt="">
+                <div class="portfolio-box-caption">
+                  <div class="portfolio-box-caption-content">
+                    <div class="project-name">
+                      Kristin Yu
+                    </div>
+                    <div class="project-category text-faded">
+                      Co-Chair
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <a class="portfolio-box" href="">
+                <img class="img-fluid" src="img/team/stitelman.png" alt="">
+                <div class="portfolio-box-caption">
+                  <div class="portfolio-box-caption-content">
+                    <div class="project-name">
+                      David Stitelman, MD
+                    </div>
+                    <div class="project-category text-faded">
+                      Advisor
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <a class="portfolio-box" href="">
+                <img class="img-fluid" src="img/team/caty.png" alt="">
+                <div class="portfolio-box-caption">
+                  <div class="portfolio-box-caption-content">
+                    <div class="project-name">
+                      Michael Caty, MD
+                    </div>
+                    <div class="project-category text-faded">
+                      Advisor
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <a class="portfolio-box" href="">
+                <img class="img-fluid" src="img/team/khalid.png" alt="">
+                <div class="portfolio-box-caption">
+                  <div class="portfolio-box-caption-content">
+                    <div class="project-name">
+                      Ayesha Khalid, MD, MBA
+                    </div>
+                    <div class="project-category text-faded">
+                      Advisor
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
       </div>
