--- a/dev/resources.html
+++ b/dev/resources.html
@@ -156,7 +156,7 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="content-section text-align-left">
+    <section class="p-0" id="portfolio">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto">
@@ -260,93 +260,7 @@
       </div>
     </section>
 
-    <!-- Download Section -->
-    <section id="download" class="download-section content-section  text-align-left">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 mx-auto">
-            <h2 style="font-weight:300; font-size: 18pt">TRACK ONE</h2>
-            <h2>DEVICE <span style="background-color: #03a9f4; color: #ffffff">&nbspDESIGN&nbsp</span></h2>
-            <p>One of the essential challenges in surgery is to design instruments that are effective, durable, biologically compatible, and practical. Whether it is making precise incisions, controlling bleeding, improving visual fields, or connecting incised tissue, there are a wide-variety of tasks that must be accomplished during an operation. In this track, we encourage participants to create novel ideas for tools that would improve outcomes for common challenges faced within the operating room.</p>
-            <p>Prize 1</p>
-          </div>
-          <div class="col-md-6 mx-auto">
-            <h2 style="font-weight:300; font-size: 18pt">TRACK TWO</h2>
-            <h2>PATIENT <span style="background-color: #03a9f4; color: #ffffff">&nbspEXPERIENCE&nbsp</span></h2>
-            <p>While a majority of focus is often spent on improving surgical technology, a key component of the surgical experience takes place outside of the operating room. From diagnosis, to admission, and ultimately follow up, the physical and emotional process of undergoing surgery is often laden with inconveniences and burdens. In this track, we encourage participants to identify and propose solutions to improve the overall patient experience with surgery.</p>
-            <p>Prize 2</p>
-          </div>
-        </div>
 
-      </div>
-    </section>
-
-
-
-    <!-- Contact Section -->
-    <section id="contact" class="content-section text-align-left">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 mx-auto">
-            <h2>SCHEDULE OF <span style="background-color: #03a9f4; color: #ffffff">&nbspEVENTS&nbsp</span></h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <h2 style="font-weight:300; font-size: 18pt">FRIDAY (OPTIONAL)</h2>
-            <p>7PM - Welcome - TAC Auditorium</p>
-            <p>9PM - Networking Reception - Local Venue</p>
-            <h2 style="font-weight:300; font-size: 18pt">SATURDAY</h2>
-            <p>SAT 7AM - Breakfast - TAC Lobby</p>
-            <p>8AM - Opening Remarks - TAC Auditorium</p>
-            <p>8:30AM - Problem Pitches</p>
-          </div>
-          <div class="col-md-6">
-            <p>9AM - Team Formation</p>
-            <p>9:30AM - Preliminary Idea Pitches</p>
-            <p>10AM - Hacking Begins - Harkness</p>
-            <p>12PM - Lunch - Harkness</p>
-            <p>5PM - Final Pitches - TAC Auditorium</p>
-            <p>6PM - Reception</p>
-            <p>6:30PM - Winners Announced</p>
-          </div>
-        </div>
-
-
-
-
-
-
-        <!-- <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2>Contact Start Bootstrap</h2>
-            <p>Feel free to leave us a comment on the
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">Grayscale template overview page</a>
-              on Start Bootstrap to give some feedback about this theme!</p>
-            <ul class="list-inline banner-social-buttons">
-              <li class="list-inline-item">
-                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
-                  <i class="fa fa-twitter fa-fw"></i>
-                  <span class="network-name">Twitter</span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://github.com/BlackrockDigital/startbootstrap" class="btn btn-default btn-lg">
-                  <i class="fa fa-github fa-fw"></i>
-                  <span class="network-name">Github</span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg">
-                  <i class="fa fa-google-plus fa-fw"></i>
-                  <span class="network-name">Google+</span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div> -->
-      </div>
-    </section>
 
     <section class="p-0" id="portfolio">
       <div class="container-fluid p-0">
