--- a/dev/resources.html
+++ b/dev/resources.html
@@ -156,7 +156,7 @@
     </header>
 
     <!-- About Section -->
-    <section class="p-0" id="portfolio">
+    <section id="about" class="p-0" id="portfolio">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto">
@@ -259,6 +259,136 @@
         </div>
       </div>
     </section>
+
+
+
+    <section class="p-0" id="portfolio">
+      <div class="container-fluid p-0">
+        <div class="row">
+          <div class="col-lg-12 mx-auto">
+            <h2>INNOVATE. PROTOTPYE. <span style="background-color: #03a9f4; color: #ffffff">&nbspREPEAT.&nbsp</span></h2>
+          </div>
+        </div>
+        <div class="row no-gutters popup-gallery">
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="">
+              <img class="img-fluid" src="img/team/sathe.jpg" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-name">
+                    Tejas Sathe
+                  </div>
+                  <div class="project-category text-faded">
+                    Co-Chair
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="">
+              <img class="img-fluid" src="img/team/swallow.png" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-name">
+                    Matthew Swallow
+                  </div>
+                  <div class="project-category text-faded">
+                    Co-Chair
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="">
+              <img class="img-fluid" src="img/team/kristin.png" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-name">
+                    Kristin Yu
+                  </div>
+                  <div class="project-category text-faded">
+                    Co-Chair
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="">
+              <img class="img-fluid" src="img/team/stitelman.png" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-name">
+                    David Stitelman, MD
+                  </div>
+                  <div class="project-category text-faded">
+                    Advisor
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="">
+              <img class="img-fluid" src="img/team/caty.png" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-name">
+                    Michael Caty, MD
+                  </div>
+                  <div class="project-category text-faded">
+                    Advisor
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="">
+              <img class="img-fluid" src="img/team/khalid.png" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-name">
+                    Ayesha Khalid, MD, MBA
+                  </div>
+                  <div class="project-category text-faded">
+                    Advisor
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Sponsored Section -->
+    <section id="sponsors" class="content-section text-align-left">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 mx-auto">
+            <h2>POWERED BY <span style="background-color: #03a9f4; color: #ffffff">&nbspYOU&nbsp</span></h2>
+            <h2 style="font-weight:300; font-size: 18pt">AND OUR GENEROUS PARTNERS<br><br></h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 mx-auto text-align-center valign">
+            <img class="img-fluid" src="img/sponsors/CBIT-centered.png" alt="">
+          </div>
+          <div class="col-lg-4 mx-auto text-align-center valign">
+            <img class="img-fluid" src="img/sponsors/city.png" alt="">
+          </div>
+          <div class="col-lg-4 mx-auto text-align-center valign">
+            <img class="img-fluid" src="img/sponsors/ynhh.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Map Section -->
+    <!-- <div id="map"></div> -->
 
     <!-- Footer -->
     <footer>
