--- a/dev/resources.html
+++ b/dev/resources.html
@@ -156,7 +156,7 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="p-0" id="portfolio">
+    <!-- <section id="about" class="p-0" id="portfolio">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto">
@@ -258,8 +258,7 @@
           </div>
         </div>
       </div>
-    </section>
-
+    </section> -->
 
 
     <section class="p-0" id="portfolio">
