--- a/dev/resources.html
+++ b/dev/resources.html
@@ -156,118 +156,20 @@
     </header>
 
     <!-- About Section -->
-    <!-- <section id="about" class="p-0" id="portfolio">
+    <section id="about" class="p-0" id="portfolio">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto">
-            <h2>INNOVATE. PROTOTPYE. <span style="background-color: #03a9f4; color: #ffffff">&nbspREPEAT.&nbsp</span></h2>
-          </div>
-        </div>
-        <div class="container-fluid p-0">
-          <div class="row no-gutters popup-gallery">
-            <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="">
-                <img class="img-fluid" src="img/team/sathe.jpg" alt="">
-                <div class="portfolio-box-caption">
-                  <div class="portfolio-box-caption-content">
-                    <div class="project-name">
-                      Tejas Sathe
-                    </div>
-                    <div class="project-category text-faded">
-                      Co-Chair
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="">
-                <img class="img-fluid" src="img/team/swallow.png" alt="">
-                <div class="portfolio-box-caption">
-                  <div class="portfolio-box-caption-content">
-                    <div class="project-name">
-                      Matthew Swallow
-                    </div>
-                    <div class="project-category text-faded">
-                      Co-Chair
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="">
-                <img class="img-fluid" src="img/team/kristin.png" alt="">
-                <div class="portfolio-box-caption">
-                  <div class="portfolio-box-caption-content">
-                    <div class="project-name">
-                      Kristin Yu
-                    </div>
-                    <div class="project-category text-faded">
-                      Co-Chair
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="">
-                <img class="img-fluid" src="img/team/stitelman.png" alt="">
-                <div class="portfolio-box-caption">
-                  <div class="portfolio-box-caption-content">
-                    <div class="project-name">
-                      David Stitelman, MD
-                    </div>
-                    <div class="project-category text-faded">
-                      Advisor
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="">
-                <img class="img-fluid" src="img/team/caty.png" alt="">
-                <div class="portfolio-box-caption">
-                  <div class="portfolio-box-caption-content">
-                    <div class="project-name">
-                      Michael Caty, MD
-                    </div>
-                    <div class="project-category text-faded">
-                      Advisor
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="">
-                <img class="img-fluid" src="img/team/khalid.png" alt="">
-                <div class="portfolio-box-caption">
-                  <div class="portfolio-box-caption-content">
-                    <div class="project-name">
-                      Ayesha Khalid, MD, MBA
-                    </div>
-                    <div class="project-category text-faded">
-                      Advisor
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
+            <h2>FOR YOUR <span style="background-color: #03a9f4; color: #ffffff">&nbspCONSIDERATION&nbsp</span></h2>
+            <p> Text text text </p>
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
 
     <section class="p-0" id="portfolio">
       <div class="container-fluid p-0">
-        <div class="row">
-          <div class="col-lg-12 mx-auto">
-            <h2>INNOVATE. PROTOTPYE. <span style="background-color: #03a9f4; color: #ffffff">&nbspREPEAT.&nbsp</span></h2>
-          </div>
-        </div>
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="">
