--- a/dev/resources.html
+++ b/dev/resources.html
@@ -161,7 +161,7 @@
         <div class="row">
           <div class="col-lg-12 mx-auto">
             <h2>FOR YOUR <span style="background-color: #03a9f4; color: #ffffff">&nbspCONSIDERATION&nbsp</span></h2>
-            <p> Text text text </p>
+            <p> Whether you are new to hackathons or just interested in learning more, we have compiled a useful set of resources to learn more about hacking, prototyping, and design thinking in medicine. In addition, we have provided resources on what other institutions are doing to promote innovation in the surgical curriculum. </p>
           </div>
         </div>
       </div>
@@ -172,15 +172,18 @@
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="">
-              <img class="img-fluid" src="img/team/sathe.jpg" alt="">
+            <a class="portfolio-box" href="https://www.youtube.com/watch?v=UAinLaT42xY">
+              <img class="img-fluid" src="img/resources/timbrown.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
-                    Tejas Sathe
+                    Tim Brown
                   </div>
                   <div class="project-category text-faded">
-                    Co-Chair
+                    IDEO
+                  </div>
+                  <div>
+                    <p>A Ted talk on Design Thinking</p>
                   </div>
                 </div>
               </div>
@@ -188,14 +191,17 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="">
-              <img class="img-fluid" src="img/team/swallow.png" alt="">
+              <img class="img-fluid" src="img/resources/thomaskrummel.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
-                    Matthew Swallow
+                    Thomas Krummel, MD
                   </div>
                   <div class="project-category text-faded">
-                    Co-Chair
+                    Stanford Biodesign
+                  </div>
+                  <div>
+                    <p>A pediatric surgeon discusses innovation in surgery</p>
                   </div>
                 </div>
               </div>
@@ -203,7 +209,7 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="">
-              <img class="img-fluid" src="img/team/kristin.png" alt="">
+              <img class="img-fluid" src="img/resources/thomaskrummel.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
