this should fix the prob

--- a/dev/resources.html
+++ b/dev/resources.html
@@ -182,7 +182,7 @@
                   <div class="project-category text-faded">
                     IDEO
                   </div>
-                  <div>
+                  <div "blurb-text">
                     <p>A Ted talk on Design Thinking</p>
                   </div>
                 </div>
@@ -190,7 +190,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="">
+            <a class="portfolio-box" href="https://www.youtube.com/watch?v=w7rnVbFxC4M">
               <img class="img-fluid" src="img/resources/thomaskrummel.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -200,7 +200,7 @@
                   <div class="project-category text-faded">
                     Stanford Biodesign
                   </div>
-                  <div>
+                  <div "blurb-text">
                     <p>A pediatric surgeon discusses innovation in surgery</p>
                   </div>
                 </div>
@@ -208,22 +208,24 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="">
+            <a class="portfolio-box" href="https://www.youtube.com/watch?v=x6-JhKUkupY">
               <img class="img-fluid" src="img/resources/thomaskrummel.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
-                    Kristin Yu
+                    MIT Hackathon
                   </div>
                   <div class="project-category text-faded">
-                    Co-Chair
+                    The Atlantic
+                  </div>
+                  <div class = "blurb-text">
+                    <p>A video highlighting what a hackathon is like</p>
                   </div>
                 </div>
               </div>
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="">
               <img class="img-fluid" src="img/team/stitelman.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
