--- a/dev/resources.html
+++ b/dev/resources.html
@@ -226,6 +226,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
+              <a class="portfolio-box" href="https://www.youtube.com/watch?v=x6-JhKUkupY">
               <img class="img-fluid" src="img/team/stitelman.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
