--- a/dev/resources.html
+++ b/dev/resources.html
@@ -209,7 +209,7 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="https://www.youtube.com/watch?v=x6-JhKUkupY">
-              <img class="img-fluid" src="img/resources/thomaskrummel.png" alt="">
+              <img class="img-fluid" src="img/resources/mithackathon.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
@@ -226,15 +226,18 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="https://www.youtube.com/watch?v=x6-JhKUkupY">
-              <img class="img-fluid" src="img/team/stitelman.png" alt="">
+              <a class="portfolio-box" href="https://www.youtube.com/watch?v=a8JVKZidmv8">
+              <img class="img-fluid" src="img/resources/austinclements.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
-                    David Stitelman, MD
+                    Austin Clements
                   </div>
                   <div class="project-category text-faded">
-                    Advisor
+                    Ten One Ten Ventures
+                  </div>
+                  <div class="blurb-text">
+                    <p>Delivering the perfect pitch</p>
                   </div>
                 </div>
               </div>
