--- a/dev/index.html
+++ b/dev/index.html
@@ -213,7 +213,7 @@
             <p>7PM - Welcome - TAC Auditorium</p>
             <p>9PM - Networking Reception - Local Venue</p>
             <h2 style="font-weight:300; font-size: 18pt">SATURDAY</h2>
-            <p>SAT 7AM - Breakfast - TAC Lobby</p>
+            <p>7AM - Breakfast - TAC Lobby</p>
             <p>8AM - Opening Remarks - TAC Auditorium</p>
             <p>8:30AM - Problem Pitches</p>
           </div>
