--- a/dev/index.html
+++ b/dev/index.html
@@ -105,7 +105,7 @@
 
                 <div class="form-group row align-items-left">
                   <div class="col-auto">
-                    <label class="col-form-label col-form-label-lg" for="exampleSelect1">and I'm a </label>
+                    <label class="col-form-label col-form-label-lg" for="exampleSelect1">and I'm a(n) </label>
                   </div>
                   <div class="col-auto">
                     <select class="form-control form-control-lg" id="exampleSelect1">
