--- a/dev/index.html
+++ b/dev/index.html
@@ -75,7 +75,7 @@
             </div>
 
             <div class="col-lg-6 mx-auto malign">
-              <p><br></p>
+              <p>Sign up for more information:</p>
               <form>
                 <div class="form-group row align-items-left">
                   <div class="col-auto">
