--- a/dev/index.html
+++ b/dev/index.html
@@ -115,6 +115,7 @@
                       <option>Business person</option>
                       <option>Designer</option>
                       <option>Engineer</option>
+                      <option>Other</option>
                     </select>
                   </div>
                 </div>
