--- a/dev/index.html
+++ b/dev/index.html
@@ -74,7 +74,7 @@
               </ul>
             </div>
 
-            <div class="col-lg-6 mx-auto malign">
+            <div class="col-lg-6 mx-auto malign text-align-left">
               <p>Sign up for more information:</p>
               <form>
                 <div class="form-group row align-items-left">
