--- a/dev/index.html
+++ b/dev/index.html
@@ -161,6 +161,13 @@
       </div>
     </header>
 
+    <section id="video">
+      <!-- 21:9 aspect ratio -->
+      <div class="embed-responsive embed-responsive-21by9">
+        <iframe class="embed-responsive-item" src="https://vimeo.com/268233678"></iframe>
+      </div>
+    </section>
+
     <!-- About Section -->
     <section id="about" class="content-section text-align-left">
       <div class="container">
