--- a/dev/index.html
+++ b/dev/index.html
@@ -163,9 +163,11 @@
 
     <section id="video">
       <!-- 21:9 aspect ratio -->
-      
-      <div class="embed-responsive embed-responsive-21by9">
-        <iframe class="embed-responsive-item" src="https://vimeo.com/268233678"></iframe>
+      <div class ="container">
+        <p> test </p>
+        <div class="embed-responsive embed-responsive-21by9">
+          <iframe class="embed-responsive-item" src="https://vimeo.com/268233678"></iframe>
+        </div>
       </div>
     </section>
 
