--- a/dev/index.html
+++ b/dev/index.html
@@ -166,7 +166,7 @@
       <div class ="container">
         <p> test </p>
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/edit?video_id=jw_u3dx8M6g"></iframe>
+          <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/268233678"></iframe>
         </div>
       </div>
     </section>
