--- a/dev/index.html
+++ b/dev/index.html
@@ -164,7 +164,7 @@
     <section id="video">
       <div class="container">
       <!-- 21:9 aspect ratio -->
-        <div class="embed-responsive embed-responsive-16by9">
+        <div class="embed-responsive">
           <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/268233678"></iframe>
         </div>
       </div>
