--- a/dev/index.html
+++ b/dev/index.html
@@ -162,7 +162,7 @@
     </header>
 
     <section id="video">
-      <div class="container">
+      <div class="container-fluid p-0">
       <!-- 21:9 aspect ratio -->
         <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/268233678"></iframe>
