--- a/dev/index.html
+++ b/dev/index.html
@@ -161,14 +161,14 @@
       </div>
     </header>
 
-    <section id="video">
+    <!-- <section id="video">
       <div class="container-fluid p-0">
       <!-- 21:9 aspect ratio -->
-        <div class="embed-responsive embed-responsive-16by9">
+        <!-- <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/268233678"></iframe>
         </div>
       </div>
-    </section>
+    </section> --> -->
 
     <!-- About Section -->
     <section id="about" class="content-section text-align-left">
