--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
               <form>
                 <div class="form-group row align-items-left">
                   <div class="col-auto">
-                    <label class="col-form-label col-form-label-lg" for="exampleInputEmail1">Hi, I'm</label>
+                    <label class="col-form-label col-form-label-lg" for="hiim">Hi, I'm</label>
                   </div>
                   <div class="col-auto">
                     <input type="text" class="form-control form-control-lg" id="inputName" aria-describedby="inputName" placeholder="Name">
                 <!-- <small id="nameHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                   </div>
                   <div class="col-auto">
-                    <label class="col-form-label col-form-label-lg" for="exampleInputEmail1">.</label>
+                    <label class="col-form-label col-form-label-lg" for="period">.</label>
                   </div>
                 </div>
 
@@ -98,7 +98,7 @@
                     <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                   </div>
                   <div class="col-auto">
-                    <label class="col-form-label col-form-label-lg" for="exampleInputEmail1">,</label>
+                    <label class="col-form-label col-form-label-lg" for="comma">,</label>
                   </div>
                   <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                 </div>
@@ -122,10 +122,10 @@
 
                 <div class="form-group row align-items-left">
                   <div class="col-auto">
-                    <label class="col-form-label col-form-label-lg" for="exampleSelect1">interested in being a</label>
+                    <label class="col-form-label col-form-label-lg" for="exampleSelect2">interested in being a</label>
                   </div>
                   <div class="col-auto">
-                    <select class="form-control form-control-lg" id="exampleSelect1">
+                    <select class="form-control form-control-lg" id="exampleSelect2">
                       <option>participant</option>
                       <option>mentor</option>
                       <option>judge</option>
@@ -135,7 +135,7 @@
 
                 <div class="form-group row align-items-left">
                   <div class="col-auto">
-                    <label class="col-form-label col-form-label-lg" for="exampleSelect1">at the hackathon.</label>
+                    <label class="col-form-label col-form-label-lg" for="athackathon">at the hackathon.</label>
                   </div>
 
                 </div>
