--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <label class="col-form-label col-form-label-lg" for="hiim">Hi, I'm</label>
                   </div>
                   <div class="col-auto">
-                    <input type="text" class="form-control form-control-lg" id="inputName" aria-describedby="inputName" placeholder="Name">
+                    <input type="text" class="form-control form-control-lg" id="inputName" name="my_name" aria-describedby="inputName" placeholder="Name">
                 <!-- <small id="nameHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                   </div>
                   <div class="col-auto">
@@ -95,7 +95,7 @@
                     <label class="col-form-label col-form-label-lg" for="exampleInputEmail1">My email is </label>
                   </div>
                   <div class="col-auto">
-                    <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                    <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" name="my_email" aria-describedby="emailHelp" placeholder="Enter email">
                   </div>
                   <div class="col-auto">
                     <label class="col-form-label col-form-label-lg" for="comma">,</label>
@@ -108,7 +108,7 @@
                     <label class="col-form-label col-form-label-lg" for="exampleSelect1">and I'm a(n) </label>
                   </div>
                   <div class="col-auto">
-                    <select class="form-control form-control-lg" id="exampleSelect1">
+                    <select class="form-control form-control-lg" id="exampleSelect1" name="my_job">
                       <option>Attending</option>
                       <option>Resident</option>
                       <option>Medical Student</option>
@@ -125,7 +125,7 @@
                     <label class="col-form-label col-form-label-lg" for="exampleSelect2">interested in being a</label>
                   </div>
                   <div class="col-auto">
-                    <select class="form-control form-control-lg" id="exampleSelect2">
+                    <select class="form-control form-control-lg" id="exampleSelect2" name="my_role">
                       <option>participant</option>
                       <option>mentor</option>
                       <option>judge</option>
