--- a/index.html
+++ b/index.html
@@ -417,6 +417,7 @@
     <!-- Custom scripts for this template -->
     <script src="js/grayscale.min.js"></script>
     <script src="js/creative.min.js"></script>
+    <script src="js/htmlform.js"></script>
     <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
