--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/268233678"></iframe>
         </div>
       </div>
-    </section> --> -->
+    </section> -->
 
     <!-- About Section -->
     <section id="about" class="content-section text-align-left">
