--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <!-- Custom styles for this template -->
     <link href="css/grayscale.min.css" rel="stylesheet">
     <link href="css/update.css" rel="stylesheet">
+    <script src="js/htmlform.js"></script>
 
   </head>
 
