--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
             <div class="col-lg-6 mx-auto malign text-align-left">
               <p class="intro-text">Sign up for more information:</p>
-              <form>
+              <form name = "submit-to-google-sheet">
                 <div class="form-group row align-items-left">
                   <div class="col-auto">
                     <label class="col-form-label col-form-label-lg" for="hiim">Hi, I'm</label>
@@ -421,6 +421,18 @@
     <script src="js/htmlform.js"></script>
     <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+
+    <script>
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbw2fy_RhXXbW0IpPuDH8ppiNx1ji06AzIJ-ooSQrxCsEHsued0/exec'
+      const form = document.forms['submit-to-google-sheet']
+
+      form.addEventListener('submit', e => {
+        e.preventDefault()
+        fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+          .then(response => console.log('Success!', response))
+          .catch(error => console.error('Error!', error.message))
+      })
+    </script>
 
   </body>
 
