--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto">
-            <h2>INNOVATE. PROTOTPYE. <span style="background-color: #03a9f4; color: #ffffff">&nbspREPEAT.&nbsp</span></h2>
+            <h2>INNOVATE. PROTOTYPE. <span style="background-color: #03a9f4; color: #ffffff">&nbspREPEAT.&nbsp</span></h2>
             <p>A hackathon is an event in which people at all levels of training (attendings, residents, medical students), and across
             variety of disciplines (medicine, engineering, design, etc.) come together to come up with problems in a particular field and
             design solutions through iterative prototyping.</p>
-            <p>We want to apply this concept to the field of surgery. We believe in a one day event, teams will be able to come up with amazing  concepts that can lay the groundwork for future projects and ventures. Prototypes can be simple sketches or mock ups. The goal is to iterate and improve rapidly in a short period of time, so the prototype doesn't have to be perfect...just look at the title.</p>
+            <p>We want to apply this concept to the field of surgery. We believe in a one day event, teams will be able to come up with amazing  concepts that can lay the groundwork for future projects and ventures. Prototypes can be simple sketches or mock ups. The goal is to iterate and improve rapidly in a short period of time, so the prototype doesn't have to be perfect.</p>
             <p>For more information, you can find additional resources <a href="resources.html">here</a>.</p>
           </div>
         </div>
@@ -194,13 +194,13 @@
           <div class="col-md-6 mx-auto">
             <h2 style="font-weight:300; font-size: 18pt">TRACK ONE</h2>
             <h2>DEVICE <span style="background-color: #03a9f4; color: #ffffff">&nbspDESIGN&nbsp</span></h2>
-            <p>One of the essential challenges in surgery is to design instruments that are effective, durable, biologically compatible, and practical. Whether it is making precise incisions, controlling bleeding, improving visual fields, or connecting incised tissue, there are a wide-variety of tasks that must be accomplished during an operation. In this track, we encourage participants to create novel ideas for tools that would improve outcomes for common challenges faced within the operating room.</p>
+            <p>One of the essential challenges in surgery is to design instruments that are effective, durable, biologically compatible, and practical. Whether it is making precise incisions, controlling bleeding, improving visual fields, or connecting tissue, there are a wide-variety of tasks that must be accomplished during an operation. In this track, we encourage participants to form novel ideas for solutions that could solve common challenges faced within the operating room.</p>
             <p>Prize 1</p>
           </div>
           <div class="col-md-6 mx-auto">
             <h2 style="font-weight:300; font-size: 18pt">TRACK TWO</h2>
             <h2>PATIENT <span style="background-color: #03a9f4; color: #ffffff">&nbspEXPERIENCE&nbsp</span></h2>
-            <p>While a majority of focus is often spent on improving surgical technology, a key component of the surgical experience takes place outside of the operating room. From diagnosis, to admission, and ultimately follow up, the physical and emotional process of undergoing surgery is often laden with inconveniences and burdens. In this track, we encourage participants to identify and propose solutions to improve the overall patient experience with surgery.</p>
+            <p>A key component of the surgical experience takes place outside of the operating room. From clinical diagnosis, to hospital admission, and ultimately follow up, the physical and emotional process of undergoing surgery is often laden with inconveniences and burdens. In this track, we encourage participants to identify problems and propose solutions to improve the overall patient surgical experience.</p>
             <p>Prize 2</p>
           </div>
         </div>
