--- a/index.html
+++ b/index.html
@@ -170,9 +170,6 @@
         </div>
       </div>
     </section> -->
-    <div class='embed-container'>
-      <iframe src='https://player.vimeo.com/video/208791851?autoplay=1&loop=1&background=1' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-    </div>
 
     <!-- About Section -->
     <section id="about" class="content-section text-align-left">
@@ -189,6 +186,11 @@
         </div>
       </div>
     </section>
+
+
+    <div class='embed-container'>
+      <iframe src='https://player.vimeo.com/video/268447442' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    </div>
 
     <!-- Download Section -->
     <section id="download" class="download-section content-section  text-align-left">
