--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">Schedule</a>
+              <a class="nav-link js-scroll-trigger" href="#contact">Schedule</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#download">Prizes</a>
+              <a class="nav-link js-scroll-trigger" href="#download">Challenges</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Team</a>
+              <a class="nav-link js-scroll-trigger" href="#portfolio">Our Team</a>
             </li>
           </ul>
         </div>
