--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <!-- Custom styles for this template -->
     <link href="css/grayscale.min.css" rel="stylesheet">
     <link href="css/update.css" rel="stylesheet">
+    <script src="vendor/jquery/jquery.min.js"></script>
     <script src="js/htmlform.js"></script>
+    <script src="js/jquery.serialize-object.js"></script>
 
   </head>
 
