--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 </div>
                 <div class="form-group row align-items-left">
                   <p>&nbsp;&nbsp;&nbsp;</p>
-                  <button type="submit" class="btn btn-default btn-lg">LET'S GO!</button>
+                  <button name="submit-form" type="submit" class="btn btn-default btn-lg">LET'S GO!</button>
                 </div>
               </form>
 
