--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             <div class="col-lg-6 mx-auto malign text-align-left">
               <p class="intro-text">Sign up for more information:</p>
-              <form name = "submit-to-google-sheet">
+              <form id = "submit-to-google-sheet">
                 <div class="form-group row align-items-left">
                   <div class="col-auto">
                     <label class="col-form-label col-form-label-lg" for="hiim">Hi, I'm</label>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="form-group row align-items-left">
                   <p>&nbsp;&nbsp;&nbsp;</p>
-                  <button name="submit-form" type="submit" class="btn btn-default btn-lg">LET'S GO!</button>
+                  <button id="submit-form" type="submit" class="btn btn-default btn-lg">LET'S GO!</button>
                 </div>
               </form>
 
