--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             <div class="col-lg-6 mx-auto malign text-align-left">
               <p class="intro-text">Sign up for more information:</p>
-              <form id = "submit-to-google-sheet">
+              <form name="submit-to-google-sheet" id = "submit-to-google-sheet">
                 <div class="form-group row align-items-left">
                   <div class="col-auto">
                     <label class="col-form-label col-form-label-lg" for="hiim">Hi, I'm</label>
